Archive2/45/53ad7dbcbeefed/output
main.cpp: In function 'int main()':
main.cpp:40:12: error: no matching function for call to 'foo1(int)'
     foo1(10); // OK, calls the second version of foo1()
            ^
main.cpp:40:12: note: candidate is:
main.cpp:7:5: note: template<class T> typename std::enable_if<std::is_floating_point<_Tp>::value, T>::type foo1(T)
     foo1(T t) 
     ^
main.cpp:7:5: note:   template argument deduction/substitution failed:
main.cpp: In substitution of 'template<class T> typename std::enable_if<std::is_floating_point<_Tp>::value, T>::type foo1(T) [with T = int]':
main.cpp:40:12:   required from here
main.cpp:7:5: error: no type named 'type' in 'struct std::enable_if<false, int>'
main.cpp:49:15: warning: unused variable 'a1' [-Wunused-variable]
     A<double> a1; // OK
               ^
